# parsing-exercise

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  queue_entry.rs
core/src/models/: mod.rs  token_accounts.rs  types.rs
core/src/parsing/: mod.rs  parser_trait.rs  simple_parser.rs
core/src/parsing/token_program/: parser.rs
core/src/redis/: local_emulator.rs  mod.rs
core/src/transaction/: helpers.rs  mod.rs  transaction.rs
src/: main.rs
