[package]
name = "parsing-exercise"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Core dependencies
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }

# Solana
solana-sdk = "2.1.1"
solana-transaction-status = "2.1.1"

# Local dependencies
indexer-core = { path = "./core" }